terraform/ecs_service.tf
resource "aws_ecs_service" "flask-service" {
  name = "flask-app-service"
  cluster = aws_ecs_cluster.fp-ecs-cluster.id
  task_definition = aws_ecs_task_definition.task_definition.arn
  desired_count = 2
  launch_type = "FARGATE"
  network_configuration {
    security_groups   = [aws_security_group.ecs_sg.id, aws_security_group.allow_tls.id]
    subnets           = aws_subnet.public_subnets.*.id
    assign_public_ip  = true
  }
  load_balancer {
    container_name    = "flask-app"
    container_port    = var.flask_app_port
    target_group_arn = aws_alb_target_group.target_group.id
  }
  depends_on = [
    aws_alb_listener.fp-alb-listener,
    aws_alb_listener.lb_api_https
  ]
}
